--- a/frontend/react_app/package.json
+++ b/frontend/react_app/package.json
@@ -11,5 +11,6 @@
     "scripts": {
         "start": "PORT=3000 react-scripts start",
         "build": "react-scripts build"
-    }
+    },
+    "proxy": "http://localhost:8000"
 }
